--- a/HungerGamesProjectV2/HungerGamesProjectV2.csproj
+++ b/HungerGamesProjectV2/HungerGamesProjectV2.csproj
@@ -64,6 +64,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Components\VotesUserControll.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -128,10 +132,17 @@
     </Compile>
     <Compile Include="Components\FIeldsHelper.cs" />
     <Compile Include="Components\NavigationHelper.cs" />
+    <Compile Include="Components\VotesUserControll.xaml.cs">
+      <DependentUpon>VotesUserControll.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\CreateVote.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\LoginPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -148,8 +159,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Pages\VotesPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\CreateVote.xaml.cs">
+      <DependentUpon>CreateVote.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
@@ -161,6 +179,9 @@
     </Compile>
     <Compile Include="Pages\UsersMainPage.xaml.cs">
       <DependentUpon>UsersMainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\VotesPage.xaml.cs">
+      <DependentUpon>VotesPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
