--- a/HungerGamesProjectV2/HungerGamesProjectV2.csproj
+++ b/HungerGamesProjectV2/HungerGamesProjectV2.csproj
@@ -201,6 +201,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Resource Include="Assets\IMG_6095.JPG" />
     <Content Include="Components\DB\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
